[package]
name = "tiny-ec"
description = "Pure Rust primitives for libecvrf."
license = "Apache-2.0"
version = "0.1.1"
authors = ["Wei Tang <hi@that.world>", "Chiro Hiro <chiro@orochi.network>"]
repository = "https://github.com/orochi-network/tiny-ec"
keywords = ["crypto", "ECDSA", "ecvrf", "no_std"]
edition = "2018"
resolver = "2"

[dependencies]
libsecp256k1-core = { version = "0.3.0", path = "core", default-features = false }
arrayref = "0.3"
digest = "0.9"
typenum = { version = "1.12", optional = true }

[dev-dependencies]
secp256k1-test = { package = "secp256k1", version = "0.20.3", features = [
    "rand-std",
    "recovery",
] }
clear_on_drop = "0.2"
serde_json = "1.0"
hex = "0.4"
hex-literal = "0.3.3"
bincode = "1.3.3"

[build-dependencies]
libsecp256k1-gen-ecmult = { version = "0.3.0", path = "gen/ecmult" }
libsecp256k1-gen-genmult = { version = "0.3.0", path = "gen/genmult" }

[features]
default = ["std", "static-context"]
std = ["libsecp256k1-core/std"]
static-context = []

[workspace]
members = ["./gen/ecmult", "./gen/genmult"]
