[package]
name = "tiny-ec-core"
description = "Core functions for pure Rust Tiny EC implementation."
license = "Apache-2.0"
version = "0.3.0"
authors = ["Wei Tang <hi@that.world>", "Chiro Hiro <chiro@orochi.network>"]
repository = "https://github.com/orochi-network/tiny-ec"
keywords = ["crypto", "ECVRF", "secp256k1", "bitcoin", "no_std"]
edition = "2018"

[dependencies]
serde = { version = "1.0.215" }
subtle = { version = "2.2", default-features = false }
crunchy = "0.2"
digest = "0.9"

[features]
default = ["std"]
std = ["subtle/std"]
