[package]
name = "tiny-ec-core"
description = "Core functions for pure Rust Tiny EC implementation."
license = "Apache-2.0"
version = "0.3.1"
authors = ["Wei Tang <hi@that.world>", "Chiro Hiro <chiro@orochi.network>"]
repository = "https://github.com/orochi-network/tiny-ec"
keywords = ["crypto", "ECVRF", "secp256k1", "bitcoin", "no_std"]
edition = "2018"

[dependencies]
serde = { version = "1.0.215" }
crunchy = "0.2"
digest = "0.9"

[features]
default = ["no_std"]
std=[]
i128 = []
core_hint_black_box = []
const-generics=[]
no_std = []